tests/ui/warn_no_tail_define.stderr
error: missing required arguments
  --> tests/ui/warn_no_tail_define.rs:19:13
   |
19 |     let _ = f!(1);
   |             ^^^^^
   |
   = note: this error originates in the macro `$crate::__bobtail_munch` which comes from the expansion of the macro `f` (in Nightly builds, run with -Z macro-backtrace for more info)
